--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="img">
 
-        <img src="/imagens/001.png" alt="">
+        <img src="./imagens/001.png" alt="">
 
     </div>
 
@@ -37,7 +37,7 @@
 <div class="cardfire">
     <div class="img">
 
-        <img src="/imagens/004.png" alt="">
+        <img src="./imagens/004.png" alt="">
 
     </div>
 
@@ -58,7 +58,7 @@
 <div class="cardwater">
     <div class="img">
 
-        <img src="/imagens/squietle.png" alt="">
+        <img src="./imagens/squietle.png" alt="">
 
     </div>
 
